Add multicluster endpoint (#411)
* add multicluster endpoint

* add 400 status code

* use cluster_id as mandatory

* make status required too

* use prediction_status instead of status

* Logic for multi-cluster endpoint

* Fixing lintians

* Fixing const error

* Add gosec ignore

* Add README information and small fixed to allow omitempty

* Fixing items schema definitions

---------
