# server/endpoints.go
@@ -117,6 +117,9 @@ const (
 	// UpgradeRisksPredictionEndpoint returns the prediction about upgrading
 	// the given cluster.
 	UpgradeRisksPredictionEndpoint = "cluster/{cluster}/upgrade-risks-prediction"
+	// UpgradeRisksPredictionMultiClusterEndpoint returns the predictions about
+	// upgrading a list of clusters
+	UpgradeRisksPredictionMultiClusterEndpoint = "upgrade-risks-prediction" // #nosec G101
 
 	// MetricsEndpoint returns prometheus metrics
 	MetricsEndpoint = "metrics"
