# types/types.go
@@ -234,6 +234,15 @@ type UpgradeRiskPrediction struct {
 	Predictors  UpgradeRisksPredictors `json:"upgrade_risks_predictors"`
 }
 
+// ClusterUpgradeRiskPrediction data structure represents body of the reponse
+// for a multi-cluster upgrade-risk-prediction request
+type ClusterUpgradeRiskPrediction struct {
+	Cluster     string                  `json:"cluster_id"`
+	Status      string                  `json:"prediction_status"`
+	Recommended bool                    `json:"upgrade_recommended,omitempty"`
+	Predictors  *UpgradeRisksPredictors `json:"upgrade_risks_predictors,omitempty"`
+}
+
 // SimplifiedReport is structure returned by the service to IO to handle On Demand Data Gathering
 type SimplifiedReport struct {
 	Cluster   string              `json:"cluster"`
